<resources>
    <string name="app_name">Watchdog</string>
    <string name="action_settings">Settings</string>
    <string name="button_start_watch">Start Watch</string>
    <string name="button_pause_watch">Pause Watch</string>
    <string name="button_stop_watch">Stop Watch</string>
    <string name="result_tv_message">See Warnings and Results Here</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_setting_password_title">App Password</string>
    <string name="pref_setting_password_default">12345</string>
    <string name="password_pref_key">password_pref</string>

    <string name="pref_setting_phone_title">Owners Phone</string>
    <string name="pref_setting_phone_default">+5585986955418</string>
    <string name="phone_pref_key">phone_pref</string>

    <string name="pref_setting_contact_title">Contact Method</string>
    <string name="pref_setting_contact_default">SMS</string>
    <string name="contact_pref_key">contact_pref</string>

    <string name="pref_setting_sensor_title">Sensor Sensibility</string>
    <string name="pref_setting_sensor_default">50</string>
    <string name="sensor_pref_key">sensor_pref</string>


    <!--Strings related to settings panel-->
    <string name="device_title">Connected Device</string>
    <string name="phone_title">Owners Phone</string>
    <string name="contact_title">Prefered Contact Method</string>
    <string name="sensor_title">Sensor Sensibility</string>
    <string name="help_title">Help</string>
    <string name="save_button">Save</string>
    <string name="connect_button">Connect</string>
    <string name="rb_phone">Phone</string>
    <string name="rb_sms">SMS</string>
    <string name="drawer_open">Open Settings</string>
    <string name="drawer_close">Close Settings</string>
    <string name="bt_connect">Connect to Device</string>
    <string name="btn_searchDevices">Add Device</string>
    <string name="tv_devicesPaired">Devices Paired</string>
    <string name="tv_devicesFound">Devices Found</string>
    <string name="bt_dialog_message">Choose a device to add</string>

</resources>
