<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/pref_setting_password_default"
        android:key="@string/password_pref_key"
        android:title="@string/pref_setting_password_title"
        android:inputType="text"
        android:singleLine="true"/>
    <EditTextPreference
        android:defaultValue="@string/pref_setting_phone_default"
        android:key="@string/phone_pref_key"
        android:title="@string/pref_setting_phone_title"
        android:inputType="text"
        android:singleLine="true"/>

    <ListPreference
        android:key="@string/contact_pref_key"
        android:title="@string/pref_setting_contact_title"
        android:dialogTitle="@string/pref_setting_contact_title"
        android:entries="@array/pref_setting_contact_entries"
        android:entryValues="@array/pref_setting_contact_values"
        android:defaultValue="@string/pref_setting_contact_default" />

    <EditTextPreference
        android:defaultValue="@string/pref_setting_sensor_default"
        android:key="@string/sensor_pref_key"
        android:title="@string/pref_setting_sensor_title"
        android:inputType="number"
        android:singleLine="true"/>
</PreferenceScreen>
