<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.levi.watchdog.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:id="@+id/linearLayout"
        android:layout_weight="1">
        <Button
            android:layout_width="match_parent"
            android:layout_margin="4dp"
            android:layout_height="100dp"
            android:text="@string/button_start_watch"
            android:textColor="@color/textWhite"
            android:id="@+id/button_start_watch"
            android:background="@drawable/button_green"/>
        <Button
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/button_pause_watch"
            android:id="@+id/button_pause_watch"
            android:background="@drawable/button_yellow"/>
        <Button
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/button_stop_watch"
            android:id="@+id/button_stop_watch"
            android:background="@drawable/button_red"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:layout_weight="2">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/bt_connect"
            android:theme="@style/AppTheme.DarkActionBar"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="bluetoothActivityStart"/>
        <TextView
            android:layout_width="match_parent"
            android:height="50dp"
            android:padding="16dp"
            android:layout_height="60dp"
            android:layout_weight="0.36"

            android:text="@string/result_tv_message"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
</LinearLayout>
